[package]
name = "tkrzw-rs"
version = "0.1.0"
edition = "2021"

[features]
lz4 = ["dep:lz4"]
lzma = ["dep:xz-sys"]
zlib = ["dep:flate2"]
zstd = ["dep:zstd"]
default = ["lz4", "lzma", "zlib", "zstd"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
log = "^0.4"

[dependencies.flate2]
version = "1.0"
optional = true

[dependencies.lz4]
version = "1.24"
optional = true

[dependencies.xz-sys]
version = "0.1"
optional = true

[dependencies.zstd]
version = "0.12"
optional = true

[target.'cfg(target_os = "windows")'.dependencies]
winapi = "0.3"

[dev-dependencies]
env_logger = "0.9"
mersenne_twister = "1.1"
pretty_assertions = "0.6"
rand = "0.4"
test-log = "0.2"